--- a/task 2.html
+++ b/task 2.html
@@ -63,6 +63,6 @@
         <!-- #fffa69 - желтый, #074481 - синий, #ff5b2d - красный, #000000 - черный, #ffffff - белый -->
         </table>
         <br/>
-        <img src="lesson2/tables_hw.png" alt="tablucya"  height="400">
+        <img src="tables_hw.png" alt="tablucya"  height="400">
     </body>
 </html>
