--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
     <meta charset="utf-8">
     </head>
 <body>
-    Меню
+   
+    <h1>Здорова чувачок!!!!</h1>
+    <h2> Это таки я :-))</h2>
+    <img src="ya.jpg" alt="ya" height="100">
+   <hr/> Меню 
     <ul>
     <li> <a href="task1.html">задание 1 </a> </li>
     <li> <a href="task%202.html">задание 2 </a> </li>
